src/pages/Main/main.module.scss
@import '../../styles/variables';

.container {
    max-width: $max-width-container;
    width: 100%;
    margin: 0 auto;
    padding: $padding-container;
}

.hero {
    height: calc(100vh);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    position: relative;

    &__container {
        max-width: $max-width-container;
        width: 100%;
        padding: $padding-container;
        margin: -48px auto 0;

        button {
            margin-bottom: 20px;
        }
    }

    &__content {
        margin-bottom: 20px;

        span {
            font-size: 2.8vw;
            line-height: 2.8vw;
            text-transform: uppercase;
            font-weight: 500;
        }

        h1 {
            font-size: 7vw;
            line-height: 7vw;
            text-transform: uppercase;
            color: transparent;
            -webkit-text-stroke: 2px $primary-color;
            margin-bottom: 20px;
        }

        p {
            font-size: 2.8vw;
            line-height: 2.8vw;
            font-weight: 500;
            max-width: 50vw;
            width: 100%;
            margin: 0 auto;
        }
    }

    &__img1 {
        position: absolute;
        top: 80%;
        left: 0;
        transform: translateY(-80%);
        height: auto;
        width: 25vw;
        z-index: -1;
    }

    &__img2 {
        position: absolute;
        top: 40%;
        right: 0;
        transform: translateY(-40%);
        // height: 60vh;
        height: auto;
        width: 25vw;
        z-index: -1;
    }

    &__mause {
        position: absolute;
        bottom: 10px;
        left: 50%;
        transform: translateX(-50%);
        padding-bottom: 5px;

        svg {
            fill: $primary-color;
            margin-bottom: 5px;
        }
    }

    &__mausearrov {
        width: 100%;
        height: 12px;
        position: relative;
        opacity: 1;
        animation: arrow-animation 2s ease-in-out infinite;

        &:nth-child(2) {
            animation-delay: 1s;
        }

        &:nth-child(3) {
            animation-delay: 1.4s;
        }

        &::before {
            content: '';
            position: absolute;
            left: 0;
            bottom: 50%;
            width: 60%;
            height: 3px;
            transform: rotate(45deg);
            background: $primary-color;
        }

        &::after {
            content: '';
            position: absolute;
            right: 0;
            bottom: 50%;
            width: 60%;
            height: 3px;
            transform: rotate(-45deg);
            background: $primary-color;
        }
    }
}
// ========================================================================================================
// animation
// ========================================================================================================
@keyframes arrow-animation {
    0% {
        transform: translateY(-10px);
        opacity: 0;
    }
    50% {
        transform: translateY(0);
        opacity: 1;
    }
    100% {
        transform: translateY(10px);
        opacity: 0;
    }
}

.projects {
    max-width: $max-width-container;
    width: 100%;
    margin: 0 auto;
    padding: $padding-section;

    h3 {
        margin-bottom: $margin-title;
    }

    &__link {
        margin-top: $margin-title;
        text-align: center;
    }
}

.skills {
    padding: $padding-section;

    h3 {
        margin-bottom: $margin-title;
    }

    &__container {
        display: flex;
        gap: 40px;
    }

    &__image {
        width: 45%;
        
        img {
            width: 100%;
            height: auto;
            max-width: 500px;
            max-height: 500px;
            height: auto;
            display: block;
            margin: 0 auto;
        }
    }

    &__quote {
        font-size: $font-size-lg-md;
        line-height: calc($font-size-lg-md + 4px);
        text-align: center;
        margin-bottom: 10px;
    }



    &__items {
        width: 55%;
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        gap: 50px;
    }

    &__item {
        svg {
            width: 100px;
            height: 100px;
            display: block;
            margin: 0 auto 10px;
        }
    }

    &__title {
        font-size: $font-size-lg-xl;
        line-height: $font-size-lg-xl;
        text-align: center;
        margin-bottom: 5px;
    }


    &__text {
        text-align: center;
    }
} 

.posts {
    padding: $padding-section;

    h3 {
        margin-bottom: $margin-title;
    }

    &__link {
        margin-top: $margin-title;
        text-align: center;
    }
}

@media (min-width: 1200px) {
    .hero{
        &__content {
            span {
                font-size: 28px;
                line-height: 32px;
            }
    
            h1 {
                font-size: 100px;
                line-height: 100px;
            }
    
            p {
                font-size: 28px;
                line-height: 32px;
                max-width: 500px;
            }
        }
    }
}

@media (max-width: 1366px) and (max-height: 500px) {
    .hero {
        min-height: 400px;
    }
}

@media (max-width: 1366px) and (max-height: 650px) {
    .hero {
        &__container {
            margin-top: 100px;
        }

        &__mause {
            display: none;
        }
    }
}

@media (max-width: 1024px) {
    .hero {
        &__mause {
            display: none;
        }
    }

    .skills {
        &__container {
            gap: 20px;
        }
        &__image {
            width: 50%;
        }

        &__items {
            width: 50%;
            gap: 20px;
        }
    }
}

@media (max-width: 769px) {
    .skills {
        &__container {
            display: block;
        }

        &__image {
            width: 100%;
            margin-bottom: 30px;
        }

        &__quote {
            max-width: 600px;
            font-size: $font-size-lg;
            margin: 0 auto 10px;
        }

        &__items {
            width: 100%;
        }
    }
}

@media (max-width: 700px) {
    .hero {
        padding-top: 80px;
        display: block;
        text-align: left;
        
        &__container {
            text-align: center;
            padding-top: 80px;
            margin-bottom: 80px;
        }

        &__content {
            margin-bottom: 20px;

            span {
                font-size: 20px;
                line-height: 20px;
            }

            h1 {
                font-size: 50px;
                line-height: 50px;
            }

            p {
                max-width: 325px;
                width: 100%;
                font-size: 20px;
                line-height: 26px;
            }
        }

        &__img1 {
            position: static;
            transform: translateY(0);
        }

        &__img1 {
            width: 50vw;
        }

        &__img2 {
            top: 80%;
            width: 40vw;
        }
    }

    .projects {
        padding-top: 80%;
    }
}

@media (max-width: 600px) {
    .projects, .skills, .posts {
        h3{
            margin-bottom: $margin-title-mobile;
        }
    }

    .projects {
        &__link {
            margin-top: $margin-title-mobile;
        }
    }

    .posts {
        &__link {
            margin-top: $margin-title-mobile;
        }
    }
}

@media (max-width: 426px) {
    .projects {
        h3 {
            margin-bottom: $margin-title-mobile;
        }

        &__link {
            margin-top: $margin-title-mobile;
        }
    }

    .skills {
        &__items {
            gap: 10px;
        }

        &__item {
            svg {
                width: 60px;
                height: 60px;
            }
        }

        &__title {
            font-size: $font-size-sm;
        }
    }
}

